--- a/docker-container-deploy.yaml
+++ b/docker-container-deploy.yaml
@@ -6,7 +6,7 @@
   - name: Create & Start Container
     docker_container:
       name: webserver
-      image: "kimjuhyo/hello:{{ lookup('env','BUILD_NUMBER') }}"
+      image: "heezoochoi/hello:{{ lookup('env','BUILD_NUMBER') }}"
       state: started
       ports:
       - "80:8080"
